<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp">
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="144dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:singleLine="true"
            android:ellipsize="start"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/txt_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_layout"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_get_verifycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_verifycode"
            android:textSize="16sp"
            />
        <ImageView
            android:id="@+id/img_verifycode"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:contentDescription="@string/verifycode"
            />
        <EditText
            android:id="@+id/edt_verifycode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/input_verifycode"
            android:inputType="number"
            android:singleLine="true"
            android:ellipsize="start"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_call_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_layout"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_call_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_text"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/btn_text_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/release_text"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_call_layout"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_call_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_video_audio"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/btn_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/release"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/release_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/dialing_layout"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_conf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conf"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textSize="16sp"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_msg"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:divider="#0000"
        android:background="#d8e0e8"
        android:layout_below="@+id/release_layout"
        android:layout_marginTop="2dp"
        />

    <LinearLayout
        android:id="@+id/msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_below="@+id/lv_msg">
        <EditText
            android:id="@+id/edt_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginLeft="8dp"
            android:singleLine="true"
            android:ellipsize="start"
            android:hint="@string/input_msg"
            />
        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg_layout"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel_queue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_queue"
            android:textSize="14sp"
            android:gravity="center"
            android:visibility="invisible"
            />
    </LinearLayout>
</RelativeLayout>
