<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/txt_ip"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:text="@string/ics_ip"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        />

    <EditText
        android:id="@+id/edt_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_ip"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/txt_ip"
        android:singleLine="true"
        android:ellipsize="start"
        android:labelFor="@id/edt_ip"
        android:digits="0123456789."
        android:hint="@string/ics_ip"
        />

    <TextView
        android:id="@+id/txt_port"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_ip"
        android:layout_marginTop="16dp"
        android:text="@string/ics_port"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_port"
        android:layout_below="@id/txt_ip"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/txt_port"
        android:singleLine="true"
        android:ellipsize="start"
        android:inputType="number"
        android:textSize="16sp"
        android:labelFor="@id/edt_port"
        android:hint="@string/ics_port"
        />

    <TextView
        android:id="@+id/txt_sip_ip"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_port"
        android:text="@string/sip_ip"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_sip_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_sip_ip"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/txt_sip_ip"
        android:singleLine="true"
        android:ellipsize="start"
        android:labelFor="@id/edt_sip_ip"
        android:digits="0123456789."
        android:hint="@string/sip_ip"
        />

    <TextView
        android:id="@+id/txt_sip_port"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_sip_ip"
        android:layout_marginTop="16dp"
        android:text="@string/sip_port"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_sip_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_sip_port"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/txt_sip_port"
        android:singleLine="true"
        android:ellipsize="start"
        android:inputType="number"
        android:textSize="16sp"
        android:labelFor="@id/edt_sip_port"
        android:hint="@string/sip_port"
        />

    <TextView
        android:id="@+id/txt_access_code_text"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_sip_port"
        android:layout_marginTop="16dp"
        android:text="@string/access_code_text"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_access_code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_access_code_text"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/txt_access_code_text"
        android:singleLine="true"
        android:ellipsize="start"
        android:inputType="number"
        android:textSize="16sp"
        android:labelFor="@id/edt_access_code_text"
        android:hint="@string/access_code_text"
        />

    <TextView
        android:id="@+id/txt_access_code_audio"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_access_code_text"
        android:layout_marginTop="16dp"
        android:text="@string/access_code_audio"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_access_code_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_access_code_audio"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/txt_access_code_audio"
        android:singleLine="true"
        android:ellipsize="start"
        android:inputType="number"
        android:textSize="16sp"
        android:labelFor="@id/edt_access_code_audio"
        android:hint="@string/access_code_audio"
        />

    <TextView
        android:id="@+id/txt_tls_srtp"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_access_code_audio"
        android:layout_marginTop="16dp"
        android:text="@string/tls_srtp"
        android:textSize="16sp"
        />

    <CheckBox
        android:id="@+id/cb_tls_srtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_tls_srtp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@id/txt_tls_srtp"
        />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_tls_srtp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_name"
        android:layout_toEndOf="@id/txt_name"
        android:singleLine="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:labelFor="@id/edt_name"
        android:hint="@string/name"
        />

    <TextView
        android:id="@+id/txt_anonymous_id"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginTop="16dp"
        android:text="@string/anonymous_card"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_anonymous_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_anonymous_id"
        android:layout_toEndOf="@id/txt_anonymous_id"
        android:singleLine="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:labelFor="@id/edt_anonymous_id"
        android:hint="@string/anonymous_card"
        />

    <TextView
        android:id="@+id/txt_domain"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_anonymous_id"
        android:layout_marginTop="16dp"
        android:text="@string/domain"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_domain"
        android:layout_toEndOf="@+id/txt_domain"
        android:singleLine="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:labelFor="@id/edt_domain"
        android:hint="@string/domain"
        />

    <TextView
        android:id="@+id/txt_vdn"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_domain"
        android:layout_marginTop="16dp"
        android:text="@string/vdn_id"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edt_vdn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_vdn"
        android:layout_toEndOf="@+id/txt_vdn"
        android:singleLine="true"
        android:ellipsize="start"
        android:textSize="16sp"
        android:inputType="number"
        android:labelFor="@id/edt_vdn"
        android:hint="@string/vdn_id"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="112dp"
        android:layout_height="64dp"
        android:layout_below="@+id/txt_vdn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/login"
        />

</RelativeLayout>
